Makes sure checkstyle errors are printed if I run it from the terminal

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
                     <encoding>UTF-8</encoding>
                     <linkXRef>false</linkXRef>
                     <failOnViolation>false</failOnViolation>
+                    <consoleOutput>true</consoleOutput>
                 </configuration>
                 <executions>
                     <execution>
