--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <description>The code and slides for the talk of the same name</description>
 
     <properties>
-        <maven.compiler.source>9</maven.compiler.source>
-        <maven.compiler.target>9</maven.compiler.target>
+        <maven.compiler.source>10</maven.compiler.source>
+        <maven.compiler.target>10</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.12.4</scala.version>
         <kotlin.version>1.2.20</kotlin.version>
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.7.9</version>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.7.9</version>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -151,7 +151,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Agent-Class>demos.libraries.RemoteTimeTraveling</Agent-Class>
+                            <Agent-Class>demos.libraries.remote.Attack</Agent-Class>
                             <Can-Retransform-Classes>true</Can-Retransform-Classes>
                         </manifestEntries>
                     </archive>
